# Marketplace-Blog-Backend-Project

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0fb1d11a08ff_create_users_table.py  90020d2b9601_add_posts_and_categories.py  c6564062e27b_add_is_deleted_to_categories.py
src/marketplace_blog/: main.py
src/marketplace_blog/api/: router.py
src/marketplace_blog/api/routes/: categories.py  login.py  posts.py  users.py
src/marketplace_blog/core/: config.py  hashing.py  security.py
src/marketplace_blog/db/: base.py  session.py
src/marketplace_blog/models/: category.py  post.py  user.py
src/marketplace_blog/rabbit/: connection.py  consumer.py  producer.py  test_connection.py  test_producer.py
src/marketplace_blog/repositories/: categories.py  posts.py  users.py
src/marketplace_blog/schemas/: category.py  post.py  user.py
src/marketplace_blog/services/: categories.py  email.py  posts.py  users.py
tests/: conftest.py  utils.py
tests/category_tests_handlers/: test_create_category.py  test_delete_category.py  test_get_category.py  test_update_category.py
tests/post_tests_handlers/: test_create_post.py  test_delete_post.py  test_get_post.py  test_update_post.py
tests/tests_handlers/: test_create_user.py  test_update_user.py
tests/user_tests_handlers/: test_delete_user.py  test_get_user.py  test_update_user.py
